--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -74,6 +74,7 @@
 
 .home-grid__arrow__img{
   color: white!important;
+  fill: white!important;
   height: 100px!important;
   width: auto!important;
 }
