--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -44,13 +44,12 @@
 }
 
 .home-grid__prev{
-  padding: 0px 20px;
+  padding: 0px 30px;
   position: absolute;
   left: 0;
   top: 50%;
   background-color: transparent;
   border: none;
-  padding: 0;
   margin: 0;
   border: none;
   cursor: pointer;
@@ -72,6 +71,7 @@
 }
 
 .home-grid__arrow__img{
+  width: 30px;
   fill: white;
 }
 
