--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -169,14 +169,14 @@
   @media (max-width: 768px) {
     flex-direction: column;
     padding: 20px 20px 40px 20px;
-    // gap: 20px; 
-    // align-items: center;
+    gap: 20px; 
+    align-items: center;
   }
 }
 
 
 .top-products-container__item{
-  position: relative;
+  // position: relative;
   display: flex;
   flex-direction: column;
   text-decoration: none;
@@ -369,12 +369,12 @@
 
 
 .fixedbutton__img{
-  width: 50px;
+  width: 100px!important;
   height: auto;
   z-index: 1000;
 
   @media (max-width: 1280px) {
-    width: 30px;
+    width: 80px!important;
   }
 }
 
