--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -28,7 +28,7 @@
 .home-info{
   position: absolute;
   top: 30%;
-  padding-left: 50px;
+  padding-left: 2%;
   // left: 10%;
 
   @media (max-width:1280px){
@@ -36,7 +36,7 @@
     // width: 100%;
     // height: 100%;
     top: 30%;
-    padding: 0 10%;
+    padding: 0 3%;
     // left: 0%;
     display: flex;
     justify-content: end;
