--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -111,7 +111,7 @@
   height: $home_banner_size!important;
   width: 100%;
   object-fit: cover;
-  filter: brightness(0.4)
+  // filter: brightness(0.4)
 }
 
 .home-title__button{
