--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -79,6 +79,7 @@
 }
 
 .home-title{
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 2.2rem;
   font-weight: 500;
   margin-bottom: 0.3rem;
