--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,7 +1,41 @@
 @font-face {
   font-family: 'Helvetica Neue LT';
   font-style: normal;
-  // font-weight: normal;
+  font-weight: 100;
   font-display: swap;
-  src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-Bd.woff2') format('woff2');
+  src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-100-UltLt.otf') format('otf');
+}
+
+
+@font-face {
+  font-family: 'Helvetica Neue LT';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-300-Lt.otf') format('otf');
+}
+
+
+@font-face {
+  font-family: 'Helvetica Neue LT';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-500-Bd.otf') format('otf');
+}
+
+@font-face {
+  font-family: 'Helvetica Neue LT';
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-800-Blk.otf') format('otf');
+}
+
+@font-face {
+  font-family: 'Helvetica Neue LT';
+  font-style: normal;
+  font-weight: 900;
+  font-display: swap;
+  src: local('Helvetica Neue LT'), url('../fonts/HelveticaNeueLTStd-900-Hv.otf') format('otf');
 }
