--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -98,7 +98,8 @@
       width: 19rem;
       @media (max-width: 768px) {
         width: 100%;
-        margin: 0 !important;
+        margin-top: 115%!important; 
+        // margin: 0 !important;
       }
 
       .header-title {
