:lipstick: Change cuotealo

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -98,8 +98,12 @@
       width: 19rem;
       @media (max-width: 768px) {
         width: 100%;
-        margin-top: 115%!important; 
-        // margin: 0 !important;
+        // margin-top: 115%!important; 
+        margin: 0 !important;
+      }
+
+      .cuotealo-available-product{
+        margin-top: 100%!important;
       }
 
       .header-title {
@@ -166,9 +170,9 @@
 
       form.cart {
         margin-bottom: 1.42857rem;
-        @media (max-width: 768px) {
-          margin-top: 100%;
-        }
+        // @media (max-width: 768px) {
+          // margin-top: 100%;
+        // }
 
         .single_variation_wrap {
           margin-top: 1rem;
