:lipstick: Add cuotealo size

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -102,7 +102,7 @@
         margin: 0 !important;
       }
 
-      .cuotealo-available-product{
+      #cuotealo-available-product{
         margin-top: 100%!important;
       }
 
