:sparkles: Update home values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -652,7 +652,7 @@
 }
 
 .home-popup-newsletter{
-  display: none!important;
+  // display: none!important;
   max-height: 600px;
   z-index: 100;
   position: fixed;
