:lipstick: Make close button bigger

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -780,9 +780,9 @@
   top: 0;
   right: 0;
   color: white;
-  background-color: black;
+  background-color: transparent;
   border:none;
-  font-size: 2rem;
+  font-size: 3rem;
   cursor: pointer;
 }
 
