--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -20,7 +20,7 @@
 
 .mayorista-features{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     margin-bottom: 20px;
 
@@ -30,8 +30,8 @@
         color:black;
         padding: 20px;
         text-align: center;
-        font-size: 1.5rem;
-        font-weight: bold;
+        font-size: 1rem;
+        font-weight: normal;
         margin-bottom: 20px;
     }
 }
@@ -43,72 +43,72 @@
     margin-bottom: 20px;
 
 
-    .product{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+
+
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-bottom: 20px;
+    width: 30%;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-decoration: none;
+    color: black;
+
+
+    .product-image{
+        width: 100%!important;
+        height: 200px!important;
         margin-bottom: 20px;
-        width: 30%;
-        height: 400px;
-        border: 1px solid black;
-        border-radius: 10px;
+    }
+
+    .product-name{
+        font-family: "Helvetica Neue LT", sans-serif;
+        color:black;
+        padding: 20px;
+        text-align: center;
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
+
+    .product-price{
+        font-family: "Helvetica Neue LT", sans-serif;
+        color:black;
         padding: 20px;
         text-align: center;
         font-size: 1.5rem;
         font-weight: bold;
         margin-bottom: 20px;
-        text-decoration: none;
-        color: black;
-
-        &:hover{
-            background-color: #f2f2f2;
-        }
-
-        .product-image{
-            width: 100%;
-            height: 200px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-
-        .product-name{
-            font-family: "Helvetica Neue LT", sans-serif;
-            color:black;
-            padding: 20px;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .product-price{
-            font-family: "Helvetica Neue LT", sans-serif;
-            color:black;
-            padding: 20px;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .list-swatches{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            margin-bottom: 20px;
-            .swatch-link{
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                border: 1px solid black;
-                margin-bottom: 20px;
-                text-decoration: none;
-                color: black;
-                &:hover{
-                    background-color: #f2f2f2;
-                }
-            }
-        }
     }
+}
 
+.list-swatches{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 20px;    
+}
+
+.swatch-link{
+    text-decoration: none;
+    color: black;    
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid black;
+    margin-bottom: 20px;
+    text-decoration: none;
+
+    .swatch-image{
+        width: 100%!important;
+        height: 100px!important ;
+    }
 }
