--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -98,15 +98,12 @@
 .swatch-link{
     text-decoration: none;
     color: black;    
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 1px solid black;
+
     margin-bottom: 20px;
     text-decoration: none;
 
     .swatch-image{
-        width: 100%!important;
-        height: 100px!important ;
+        width: 100px;
+        height: auto!important;
     }
 }
