--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -62,8 +62,8 @@
 
 
     .product-image{
-        width: 100%!important;
-        height: 200px!important;
+        width: 300px!important;
+        height: auto!important;
         margin-bottom: 20px;
     }
 
