:lipstick: Update spacing

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -42,14 +42,18 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 20px;
-
-
-
-
 }
+
+.product-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px
+}
+
 
 .product{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     margin-bottom: 20px;
     padding: 20px;
