--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -65,7 +65,6 @@
 .product{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     margin-bottom: 20px;
     padding: 20px;
     text-align: center;
@@ -74,6 +73,7 @@
     margin-bottom: 20px;
     text-decoration: none;
     color: black;
+    align-items: center;
 
 
     .product-image{
@@ -85,8 +85,8 @@
     .product-name{
         font-family: "Helvetica Neue LT", sans-serif;
         color:black;
-        padding: 20px;
-        width: 200px;
+        padding: 10px 0;
+        width: 250px;
         text-align: center;
         font-size: 1.2rem;
         font-weight: bold;
@@ -109,9 +109,14 @@
     flex-direction: row;
     justify-content: space-around;
     margin-bottom: 20px;    
+    width: 500px;
 }
 
 .swatch-link{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
     text-decoration: none;
     color: black;    
 
