:sparkles: Update page view

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -48,13 +48,14 @@
 
 .product-list{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 20px;
 }
 
 .product-container{
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
