:lipstick: Update retailers values

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -108,7 +108,7 @@
 
 .list-swatches{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     margin-bottom: 20px;    
     width: 500px;
