:sparkles: Update values

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -135,7 +135,7 @@
         height: auto!important;
     }
 
-    .swatch-name{
-        width: 50px;
-    }
+    // .swatch-name{
+        // width: 50px;
+    // }
 }
