:lipstick: Update product price

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -90,7 +90,7 @@
     padding: 10px 0;
     width: 250px;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 20px;
 }
@@ -100,8 +100,8 @@
     color:black;
     padding: 20px;
     text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 1.2rem;
+    font-weight: normal;
     margin-bottom: 20px;
 }
 
