--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -88,21 +88,16 @@
     font-family: "Helvetica Neue LT", sans-serif;
     color:black;
     padding: 10px 0;
-    width: 250px;
-    text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 20px;
 }
 
 .product-price{
     font-family: "Helvetica Neue LT", sans-serif;
     color:black;
-    padding: 20px;
-    text-align: center;
+    padding: 10px 0;
     font-size: 1.2rem;
     font-weight: normal;
-    margin-bottom: 20px;
 }
 
 .list-swatches{
@@ -122,6 +117,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     gap:10px;
     text-decoration: none;
     color: black;    
@@ -134,7 +130,7 @@
         height: auto!important;
     }
 
-    // .swatch-name{
-        // width: 50px;
-    // }
+    .swatch-name{
+        text-align: center;
+    }
 }
