--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -84,6 +84,10 @@
     margin-bottom: 20px;
 }
 
+.product-info{
+    width: 100%;
+}
+
 .product-name{
     font-family: "Helvetica Neue LT", sans-serif;
     color:black;
@@ -99,6 +103,7 @@
     font-size: 1.2rem;
     font-weight: normal;
 }
+
 
 .list-swatches{
     display: flex;
