:sparkles: Update position of swatch elements

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -115,7 +115,8 @@
 
 .swatch-elements{
     display: flex;
-    gap:10px;
+    gap:40px;
+    flex-wrap: wrap;
 }
 
 .swatch-link{
@@ -137,5 +138,6 @@
 
     .swatch-name{
         text-align: center;
+        font-size: 0.8rem;
     }
 }
