--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -25,7 +25,6 @@
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 20px;
 }
 
 .mayorista-features{
@@ -49,59 +48,27 @@
 
 .product-list{
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.product-container{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 20px
+    justify-content: space-between;
 }
 
 
-.product{
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    padding: 20px;
-    text-align: center;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-decoration: none;
-    color: black;
-    align-items: center;
+// Style each individual product
+.product {
+    width: calc(33.33% - 10px); // Set the width to one-third of the container with some spacing
+    margin-bottom: 20px; // Add some margin between products
+    box-sizing: border-box;
+    border: 1px solid #ccc; // Add borders or other styles as needed
+    padding: 10px; // Add padding or other styles as needed
+
+    @media (max-width: 768px) {
+        width: calc(50% - 10px); 
+    }
 }
 
 .product-image{
-    width: 300px!important;
-    height: auto!important;
-    margin-bottom: 20px;
-}
-
-.product-info{
     width: 100%;
-}
-
-.product-name{
-    font-family: "Helvetica Neue LT", sans-serif;
-    color:black;
-    padding: 10px 0;
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.product-price{
-    font-family: "Helvetica Neue LT", sans-serif;
-    color:black;
-    padding: 10px 0;
-    font-size: 1.2rem;
-    font-weight: normal;
+    height: auto;
 }
 
 
