:sparkles: Update make products more cool

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -55,6 +55,9 @@
 
 // Style each individual product
 .product {
+    text-decoration: none;
+    color:black;
+    font-family: "Helvetica Neue LT", sans-serif;
     width: calc(33.33% - 10px); // Set the width to one-third of the container with some spacing
     margin-bottom: 20px; // Add some margin between products
     box-sizing: border-box;
@@ -70,6 +73,25 @@
     width: 100%;
     height: auto;
 }
+
+
+.product-info{
+    display: flex;
+    flex-direction: column;
+}
+
+.product-name{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.product-detail{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 
 
 .list-swatches{
