--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -55,6 +55,9 @@
 
 // Style each individual product
 .product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-decoration: none;
     color:black;
     font-family: "Helvetica Neue LT", sans-serif;
@@ -70,8 +73,11 @@
 }
 
 .product-image{
+    padding: 20px 0;
     width: 100%;
     height: auto;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -83,7 +89,7 @@
 .product-name{
     font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .product-detail{
