--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -69,6 +69,15 @@
     @media (max-width: 768px) {
         width: calc(50% - 10px); 
     }
+
+    &:hover{
+        animation: pulse 0.5s;
+        background-color: black;
+        color: white;
+        .product-image{
+            background-color: white;
+        }
+    }
 }
 
 .product-image{
@@ -77,6 +86,7 @@
     height: auto;
     display: flex;
     justify-content: center;
+    
 }
 
 
