--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -50,6 +50,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    gap:30px
 }
 
 
@@ -61,12 +62,12 @@
     text-decoration: none;
     color:black;
     font-family: "Helvetica Neue LT", sans-serif;
-    width: calc(33.33% - 10px); // Set the width to one-third of the container with some spacing
+    width: calc(33.33% - 30px); // Set the width to one-third of the container with some spacing
     margin-bottom: 20px; // Add some margin between products
     box-sizing: border-box;
     padding: 10px; // Add padding or other styles as needed
     border: 1px solid transparent;
-
+    border-radius: 24px;
     transition: all 0.3s ease-in-out;
 
     @media (max-width: 768px) {
