:lipstick: Also show in BDI

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -116,6 +116,13 @@
         font-weight: bold;
         text-decoration: none;
     }
+
+    bdi{
+        color: #000;
+        font-size: 1.25rem;
+        font-weight: bold;
+        text-decoration: none;
+    }
 }
 
 
