--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -50,7 +50,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap:30px
+    gap:30px;
+    padding: 50px 0;
 }
 
 
