--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -107,22 +107,44 @@
     justify-content: space-between;
 }
 
-.product-price{
-    del{
-        color: #999;
-    }
-    ins{
-        color: #000;
-        font-size: 1.25rem;
-        font-weight: bold;
-        text-decoration: none;
-    }
+// .product-price{
+//     del{
+//         color: #999;
+//     }
+//     ins{
+//         color: #000;
+//         font-size: 1.25rem;
+//         font-weight: bold;
+//         text-decoration: none;
+//     }
 
-    bdi{
+//     bdi{
+//         color: #000;
+//         font-size: 1.25rem;
+//         font-weight: bold;
+//         text-decoration: none;
+//     }
+// }
+
+.product-price{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .product-price__normal{
+        color: #999;
+        font-size: 0.9rem;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        border-right: 1px solid black;
+    }
+    .product-price__mayorista{
         color: #000;
         font-size: 1.25rem;
         font-weight: bold;
         text-decoration: none;
+        display: flex;
+        flex-direction: column;
     }
 }
 
