:sparkles: Update some values

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -138,8 +138,7 @@
         display: flex;
         flex-direction: column;
         text-decoration: none;
-        padding-right: 10px;
-        border-right: 1px solid black;
+        padding: 0 10px;
     }
     .product-price__mayorista{
         color: #000;
@@ -148,6 +147,8 @@
         text-decoration: none;
         display: flex;
         flex-direction: column;
+        padding: 0 10px;
+
     }
 }
 
