--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -45,6 +45,21 @@
     }
 }
 
+.mayorista-store__header{
+    display: flex;
+    gap:30px;
+}
+
+.mayorista-store__header__store{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.mayorista-store__header__subtitle{
+    font-size: 1.2rem;
+    font-weight: normal;
+}
+
 
 .product-list{
     display: flex;
@@ -107,24 +122,7 @@
     justify-content: space-between;
 }
 
-// .product-price{
-//     del{
-//         color: #999;
-//     }
-//     ins{
-//         color: #000;
-//         font-size: 1.25rem;
-//         font-weight: bold;
-//         text-decoration: none;
-//     }
 
-//     bdi{
-//         color: #000;
-//         font-size: 1.25rem;
-//         font-weight: bold;
-//         text-decoration: none;
-//     }
-// }
 
 .product-price{
     display: flex;
