:sparkles: Update values from the columns

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -34,14 +34,17 @@
     gap:20px;
 
     li{
-        width: calc(33.33% - 50px);
+        width: calc(25% - 50px);
         list-style: none;
         font-family: "Helvetica Neue LT", sans-serif;
-        color:black;
+        color:white;
         padding: 20px;
         text-align: center;
-        font-size: 1rem;
+        font-size: 1.3rem;
         font-weight: normal;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
 
