--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
     background-color: black;
     color:white;
-
+    padding-bottom: 50px;
     @media (max-width: 768px) {
         width: 95%;
       }
@@ -32,6 +32,7 @@
     justify-content: space-around;
     margin-bottom: 20px;
     gap:20px;
+    padding: 0 10%;
 
     li{
         width: calc(25% - 50px);
@@ -45,6 +46,13 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+
+    .item-number{
+        font-size: 3rem;
+        font-weight: bold;
+        border-bottom: 1px solid white;
+        border-radius: 50%;
     }
 }
 
