--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -46,12 +46,14 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        gap:10px
     }
 
     .item-number{
+        width: 60px;
         font-size: 3rem;
         font-weight: bold;
-        border-bottom: 1px solid white;
+        border: 2px solid white;
         border-radius: 50%;
     }
 }
