--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -34,6 +34,13 @@
     gap:20px;
     padding: 0 10%;
 
+    @media (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+    }
+
     li{
         width: calc(25% - 50px);
         list-style: none;
@@ -48,6 +55,11 @@
         justify-content: center;
         gap:20px;
         align-items: center;
+
+        @media (max-width: 768px) {
+            width: 100%;
+        }
+
     }
 
     .item-number{
