:lipstick: Update some values

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -76,6 +76,11 @@
     display: flex;
     gap:30px;
     align-items: baseline;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        gap:10px;
+    }
 }
 
 .mayorista-store__header__store{
