--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -133,6 +133,7 @@
 
     @media (max-width: 768px) {
         width: calc(50% - 10px); 
+        padding: 10px;
     }
 
     &:hover{
@@ -159,7 +160,11 @@
 .product-name{
     font-size: 1.2rem;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+
+    @media (max-width: 768px) {
+        font-size: 1rem;
+    }
 }
 
 .product-detail{
