--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -124,7 +124,7 @@
     text-decoration: none;
     color:black;
     font-family: "Helvetica Neue LT", sans-serif;
-    width: calc(33.33% - 30px); // Set the width to one-third of the container with some spacing
+    width: calc(45% - 10px); // Set the width to one-third of the container with some spacing
     box-sizing: border-box;
     padding: 35px; // Add padding or other styles as needed
     border: 3px solid transparent;
@@ -133,7 +133,8 @@
 
     @media (max-width: 768px) {
         width: calc(50% - 10px); 
-        padding: 10px;
+        padding: 5px;
+        justify-content: start ;
     }
 
     &:hover{
@@ -171,8 +172,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
 }
 
+
+.product-category{
+    @media (max-width: 768px) {
+        display: none;
+    }
+}
 
 
 .product-price{
@@ -181,6 +192,11 @@
     justify-content: space-between;
     align-items: center;
 
+    @media (max-width: 768px) {
+        flex-direction: column;
+
+    }
+
     .product-price__normal{
         color: #999;
         font-size: 0.9rem;
@@ -188,6 +204,11 @@
         flex-direction: column;
         text-decoration: none;
         padding: 0 10px;
+
+        @media (max-width: 768px) {
+            font-size: 0.8rem;
+            padding: 0;
+        }
     }
     .product-price__mayorista{
         color: #000;
@@ -197,6 +218,11 @@
         display: flex;
         flex-direction: column;
         padding: 0 10px;
+
+        @media (max-width: 768px) {
+            font-size: 0.8rem;
+            padding: 0;
+        }
 
     }
 }
