--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -140,6 +140,11 @@
     &:hover{
         transform: scale(1.05);
         border: 1px solid black;
+
+        @media (max-width: 768px) {
+            transform: scale(1);
+            border: 1px solid transparent;
+        }
     }
 }
 
@@ -149,7 +154,10 @@
     height: auto;
     display: flex;
     justify-content: center;
-    
+    @media (max-width: 768px) {
+        font-size: 0.8rem;
+        padding: 0;
+    }
 }
 
 
@@ -194,7 +202,7 @@
 
     @media (max-width: 768px) {
         flex-direction: column;
-
+        align-items: baseline;
     }
 
     .product-price__normal{
