--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -5,9 +5,6 @@
     background-color: black;
     color:white;
     padding-bottom: 50px;
-    @media (max-width: 768px) {
-        width: 95%;
-      }
 }
 
 .header{
@@ -16,6 +13,9 @@
     text-align: center;
     font-size: 3rem;
     font-weight: bold;
+    @media (max-width: 768px) {
+        font-size: 2rem;
+      }
 }
 
 .subtitle{
@@ -24,6 +24,10 @@
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
+
+    @media (max-width: 768px) {
+        font-size: 1rem;
+    }
 }
 
 .mayorista-features{
@@ -68,6 +72,11 @@
         font-weight: bold;
         border: 3px solid white;
         border-radius: 50%;
+
+        @media (max-width: 768px) {
+            font-size: 2rem;
+            width: 40;
+        }
     }
 }
 
