:lipstick: Updae store values

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -52,7 +52,7 @@
         color:white;
         padding: 20px;
         padding-bottom: 10px;
-        text-align: center;
+        text-align: left;
         font-size: 1rem;
         font-weight: normal;
         display: flex;
@@ -139,7 +139,6 @@
     font-family: "Helvetica Neue LT", sans-serif;
     width: calc(33.33% - 30px); // Set the width to one-third of the container with some spacing
     box-sizing: border-box;
-    padding: 35px; // Add padding or other styles as needed
     border: 3px solid transparent;
     border-radius: 24px;
     transition: all 0.3s ease-in-out;
@@ -163,7 +162,7 @@
 
 .product-image{
     padding: 20px 0;
-    width: 100%;
+    width: 70%;
     height: auto;
     display: flex;
     justify-content: center;
@@ -177,6 +176,8 @@
 .product-info{
     display: flex;
     flex-direction: column;
+    padding: 0 30px;
+    padding-bottom: 15px;
 }
 
 .product-name{
