--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -161,8 +161,8 @@
 }
 
 .product-image{
-    padding: 20px 0;
-    width: 70%;
+    padding-top: 10px;
+    width: 100%;
     height: auto;
     display: flex;
     justify-content: center;
