--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -11,7 +11,7 @@
     font-family: "Helvetica Neue LT", sans-serif;
     padding: 20px;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bold;
     @media (max-width: 768px) {
         font-size: 2rem;
@@ -23,7 +23,7 @@
     text-align: center;
     font-size: 1.2rem;
     font-weight: 500;
-    padding-bottom: 20px;
+    // padding-bottom: 20px;
 
     @media (max-width: 768px) {
         font-size: 1rem;
@@ -36,7 +36,7 @@
     justify-content: space-around;
     margin-bottom: 20px;
     gap:20px;
-    padding: 0 10%;
+    padding: 0 5%;
 
     @media (max-width: 768px) {
         flex-direction: column;
@@ -68,7 +68,7 @@
     }
 
     .item-number{
-        width: 130px;
+        width: 100px;
         text-align: center;
         font-size: 2rem;
         padding: 10px;
