--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -164,6 +164,7 @@
     height: auto;
     display: flex;
     justify-content: center;
+    padding-bottom: 10px;
     @media (max-width: 768px) {
         font-size: 0.8rem;
         padding: 0;
