--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -141,6 +141,7 @@
     border: 3px solid transparent;
     border-radius: 24px;
     transition: all 0.3s ease-in-out;
+    margin-bottom: 20px;	
 
     @media (max-width: 768px) {
         width: calc(45% - 10px); 
