:sparkles: Add conditions on the page

--- a/src/scss/landing_product.scss
+++ b/src/scss/landing_product.scss
@@ -141,3 +141,11 @@
   }
 
 }
+
+.mayorista_header{
+  background-color: black;
+  padding: 30px;
+  font-size: 2rem;
+  font-weight: bold;
+  display: none;
+}
