--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -2,6 +2,16 @@
 @import "mixins";
 @import "~slick-carousel/slick/slick";
 
+
+.mayorista_header{
+  background-color: black;
+  padding: 30px;
+  font-size: 2rem;
+  font-weight: bold;
+  display: none;
+  position: absolute;
+}
+
 .woocommerce-notices-wrapper {
   display: none;
 }
