:sparkles: Console log price in discount

--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -6,11 +6,18 @@
 .mayorista_header{
   background-color: black;
   padding: 30px;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: bold;
   display: none;
   position: absolute;
   z-index: 99;
+  color:white;
+  width: 100%;
+  text-align: center;
+
+  @media (max-width: 768px) {
+    display: 0.8rem;
+  }
 }
 
 .woocommerce-notices-wrapper {
