--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -1365,3 +1365,7 @@ body.layout-2 {
 .woocommerce-variation-description{
   display: none!important;
 }
+
+.woocommerce-product-details__short-description{
+  display: none!important;
+}
