--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -81,7 +81,7 @@
 .home-title{
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 2.2rem;
-  font-weight: 100;
+  font-weight: 600;
   margin-bottom: 0.3rem;
   text-align: start;
   color: white;
@@ -99,10 +99,12 @@
 }
 
 .home-title--bold{
-  font-weight: 800;
+  font-weight: 700;
+  font-size: 1.2rem;
+  letter-spacing: 4px;
 
   @media (max-width: 640px) {
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: center;
     display: block;
   }
@@ -142,10 +144,10 @@
   margin-top: 2rem;
   background-color: transparent;
   color: white;
-  border: 4px solid white;
+  border-bottom: 4px solid white;
   padding: 10px 20px;
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 600;
   text-decoration: none;
   text-align: center;
   width: 50%;
