--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -815,44 +815,139 @@
 }
 
 
-.home-grid-2{
+.home-grid-2 {
   display: grid;
-  grid-template-columns: 66% 33%;
-  grid-template-rows: auto auto;
-  gap: 10px; /* Adjust the gap to your preference */
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "featured featured second" "featured featured third";
+  height: 64vw;
+  @media (min-aspect-ratio: 5/4) {
+    height: calc(100vh - 58px);
+  }
+  @media (max-width: 768px) {
+    display: block;
+    height: auto;
+    padding: 20px 20px 0px 20px;
+  }
 
-  /* Optional styles for the parent container */
-  /* You can add padding, margins, or other styles as needed */
-  padding: 10px;
-  background-color: #f0f0f0;
-}
+  section {
+    max-height: 100%;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    @media (max-width: 768px) {
+      height: 100vw;
+    }
 
-.home-grid-2 > div {
-  width: 100%;
-  height: 100%;
-  overflow: hidden; /* To ensure the images don't overflow the container */
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    &:nth-child(1) {
+      grid-area: featured;
+      @media (max-width: 768px) {
+        height: calc(100vh - 58px);
+      }
 
-  /* Optional styles for the individual containers */
-  /* You can add borders, background colors, etc. as needed */
-  border: 1px solid black;
-}
+      .layer {
+        top: 70%;
+        left: 10%;
+        width: 27vw;
+        position: absolute;
+        bottom: auto;
+        padding: 6vw 0;
+        margin: 0 7.8125vw;
+        z-index: 1;
+        text-align: left;
 
-.home-grid-2 > div:first-child {
-  grid-column: span 2;
-}
+        @media (max-width: 768px) {
+          left: 0;
+        }
 
-/* Styles for the second and third image containers */
-.home-grid-2 > div:nth-child(2),
-.home-grid-2 > div:nth-child(3) {
-  grid-row: span 1;
-}
+        h5 {
+          font-size: 2.8125vw;
+        }
 
-/* Media query for mobile view */
-@media (max-width: 767px) {
-  .home-grid-2 {
-    grid-template-columns: 1fr; /* Single column layout */
+        p {
+          font-size: 18px;
+        }
+      }
+    }
+
+    &:nth-child(2) {
+      grid-area: second;
+    }
+
+    &:nth-child(3) {
+      grid-area: third;
+
+      img {
+        object-position: top;
+      }
+    }
+
+    picture {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .layer {
+      width: 100%;
+      top: 55%;
+      position: absolute;
+      bottom: auto;
+      margin: 3.92857rem 0 0;
+      z-index: 1;
+      transform: none;
+      left: 0;    
+      text-align: center;
+      @media (max-width: 768px) {
+        left: 0;
+        width: 100% !important;
+        padding: 1.75rem 1.25rem !important;
+        margin: 0 !important;
+      }
+
+      h5 {
+        font-size: 1.28571rem;
+        color: #fff;
+        margin-bottom: 1.42857rem;
+        text-transform: uppercase;
+        line-height: .85em;
+        letter-spacing: -.05em;
+        font-family: $titleFont;
+        @media (max-width: 768px) {
+          font-size: 2.25rem !important;
+          margin-bottom: 1.5rem;
+          text-align: center ;
+        }
+      }
+
+      p {
+        color: #fff;
+        font-size: 14px;
+        line-height: 1;
+        margin-bottom: 1.42857rem;
+        @media (max-width: 768px) {
+          font-size: .85rem;
+          text-align: center;
+        }
+      }
+
+      .cta-wrapper {
+        .cta {
+          display: inline-block;
+          @include btn(#000, #f6f6f6, #fff);
+          @media (max-width: 768px) {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
