--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -816,13 +816,14 @@
 
 
 .home-grid-2 {
+  background-color: black;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "featured featured second" "featured featured third";
   height: 64vw;
   @media (min-aspect-ratio: 5/4) {
-    height: calc(100vh - 58px);
+    height: calc(98vh - 58px);
   }
   @media (max-width: 768px) {
     display: block;
