:sparkles: Update shop

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -166,6 +166,7 @@
 .shop-features__container__info__title{
   font-size: 1.49rem;
   font-size: 1.5rem;
+  font-size: 1.49rem;
   font-weight: 700;
   // margin-bottom: 1rem;
   @media (max-width: 768px) {
