:sparkles:  Update home values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -957,3 +957,10 @@
   width: 100%!important;
   height: 100%!important;
 }
+
+.button__banner{
+  position: absolute;
+  top: 60%;
+  left: 40%;
+  width: 100%;
+}
