:lipstick: Update home values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -5,13 +5,14 @@
 
 .shop-notice {
   width: 100%;
-  background: #000;
+  background: #D6F665;
   padding: .3rem .75rem .5rem;
   text-align: center;
   border-top: 1px solid #2c2c2d;
 
   a {
-    color: #fff;
+    color: black;
+    font-weight: 600;
     font-size: 1.3rem;
     text-decoration: none;
   }
