:sparkles: Update home values

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -960,8 +960,10 @@
 }
 
 .button__banner{
+  background-color: #D6F665;
+  color: black;
   position: absolute;
   top: 60%;
-  left: 40%;
-  width: 100%;
+  left: 30%;
+  width: 300px!important;
 }
