--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -164,6 +164,8 @@
 .home-title__button:hover{
   background-color: white;
   color: black;
+  font-style: italic;
+  font-size: 1.8rem;
   transition: 0.3s;
 }
 
@@ -960,10 +962,11 @@
 }
 
 .button__banner{
-  background-color: #D6F665;
-  color: black;
+  background-color: transparent;
+  color: white;
+  font-size:1.8rem;
   position: absolute;
-  top: 60%;
-  left: 30%;
+  top: 75%;
+  left: 38%;
   width: 300px!important;
 }
