--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -978,3 +978,24 @@
 
   }
 }
+
+.home-grid__social{
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+
+.home-grid__social__item{
+  width: 50px;
+  height: auto;
+  background-color: transparent;
+
+  &:hover{
+    background-color: white;
+    color: black;
+  }
+}
+
