:sparkles: Update to another level the on-hoveer transition

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -992,17 +992,16 @@
 .home-grid__social__item{
   display: flex;
   align-items: center;
-  width: 50px;
   padding: 10px;
   height: auto;
   background-color: transparent;
   border-radius: 50%;
 
   &:hover{
-    background-color: black;
-    -webkit-transition: background-color 250ms linear;
-    -ms-transition: background-color 250ms linear;
-    transition: background-color 250ms linear;
+    background-color: white;
+    -webkit-transition: background-color 500ms linear;
+    -ms-transition: background-color 500ms linear;
+    transition: background-color 500ms linear;
   }
 }
 
@@ -1013,9 +1012,12 @@
 
 
 .icon-social__fb{
-  fill: black;
+  fill: white;
   &:hover{
-    fill: white;
+    fill: black;
+    -webkit-transition: fill 500ms linear;
+    -ms-transition: fill 500ms linear;
+    transition: fill 500ms linear;
   }
 }
 
