--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -171,19 +171,35 @@
    }
 }
 
-
-.filter{
+.main-shop-menu{
   display: flex;
-  justify-content: start;
-  flex-wrap: wrap;
-  padding: 20px 0;
-
-  @media (max-width: 768px) {
-    justify-content: center;
+  gap: 25px;
+  
+  @media (max-width: 1280px) {
+    flex-direction: column;
+    gap:0px;
   }
 }
 
+.filter-categories{
+  width: 15%;
+  @media (max-width: 1280px) {
+    width: 100%;
+  }
+}
+
+.filter-categories__title{
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.filter-categories__options{
+  display: flex;
+}
+
 .filter__section__button{
+  height: 250px;
+  min-width: 300px;
   border-style: none;
   background-color: transparent;
   color: rgb(80, 80, 80);
@@ -250,5 +266,13 @@
         height: 1.25rem;
       }
     }
+  }
+}
+
+.shop-store{ 
+  width: 85%;
+
+  @media (max-width: 1280px) {
+    width: 100%;
   }
 }
