--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -174,6 +174,7 @@
 .main-shop-menu{
   display: flex;
   gap: 25px;
+  padding-top: 50px;
   
   @media (max-width: 1280px) {
     flex-direction: column;
@@ -195,8 +196,9 @@
 }
 
 .filter-categories__title{
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 600;
+  padding-bottom: 25px;
 }
 
 .filter-categories__options{
@@ -206,7 +208,6 @@
 
 .filter__section__button{
   height: 250px;
-  min-width: 300px;
   border-style: none;
   background-color: transparent;
   color: rgb(80, 80, 80);
@@ -282,4 +283,8 @@
   @media (max-width: 1280px) {
     width: 100%;
   }
+}
+
+#bar-menu{
+  display: none;
 }
