--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -211,7 +211,7 @@
   border-style: none;
   background-color: transparent;
   color: rgb(80, 80, 80);
-  border-bottom: 1px solid rgb(80, 80, 80);
+  border: 2px solid transparent;
   padding: 10px 20px;
   margin: 0 -5px;
   cursor: pointer;
@@ -229,9 +229,7 @@
 
 .filter__section__button--active{
   color: black;
-  font-size: 1rem;
-  border-bottom: 1px solid black;
-
+  border: 2px solid black;
 }
 
 .filter__section__button--ofertas{
