--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -220,15 +220,20 @@
   font-size: 1.2rem;
   
   &:hover{
-    color: white;
+    color: black;
     font-weight: 700;
-    background-color: black; 
-    transition: 0.3s;
+    border: 2px solid black;
+    transition: 0.4s;
+    -webkit-transition: border 300ms linear;
+    -ms-transition: border 300ms linear;
+    transition: border 300ms linear;
   }
 }
 
 .filter__section__button--active{
-  color: black;
+  color: white;
+  font-weight: 800;
+  background-color: black;
   border: 2px solid black;
 }
 
