:lipstick: Add same weight has hover

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -231,6 +231,7 @@
 }
 
 .filter__section__button--active{
+  font-weight: 700;
   color: white;
   background-color: black;
   border: 3px solid black;
