--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -217,15 +217,27 @@
   flex-grow: 1;
   transition: 0.35s;
   font-size: 1.2rem;
+
+  color: #0000;
+  background: 
+    linear-gradient(90deg,#1095c1 50%,#000 0) 
+    var(--_p,100%)/200% no-repeat;
+  -webkit-background-clip: text;
+          background-clip: text;
+  transition: .4s;
   
+  // &:hover{
+  //   font-weight: 700;
+  //   border: 3px solid black;
+  //   transition: 0.4s;
+  //   -webkit-transition: border 300ms linear;
+  //   -ms-transition: border 300ms linear;
+  //   transition: border 300ms linear;
+  // }
+
   &:hover{
-    font-weight: 700;
-    border: 3px solid black;
-    transition: 0.4s;
-    -webkit-transition: border 300ms linear;
-    -ms-transition: border 300ms linear;
-    transition: border 300ms linear;
-  }
+    --_p: 0%;
+  }	
 }
 
 .filter__section__button--active{
