--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -218,7 +218,7 @@
   transition: 0.35s;
   font-size: 1.2rem;
 
-  --c: #0000; /* the color */
+  --c: black; /* the color */
   background: 
     linear-gradient(90deg,#fff 50%,var(--c) 0) calc(100% - var(--_p,0%))/200% 100%,
     linear-gradient(var(--c) 0 0) 0% 100%/var(--_p,0%) 100% no-repeat;
