--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -133,6 +133,8 @@
 }
 
 .shop-features{
+  color: white;
+  background-color: black;
   display: flex;
   justify-content: space-between;
   padding: 20px 15%;
@@ -176,17 +178,22 @@
   display: flex;
   gap: 25px;
   padding-top: 50px;
+  width: 85%;
+  margin: 0 auto;
   
   @media (max-width: 1280px) {
     flex-direction: column;
-    gap:0px;
+    width: 95%;
+    gap:10px;
   }
 }
 
 .filter{
   width: 15%;
+  padding-right: 25px;
   @media (max-width: 1280px) {
     width: 100%;
+    padding-right: 0px;
   }
 }
 
