:lipstick: Make check values

--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -288,12 +288,31 @@
   }
 }
 
+
 .shop-store{ 
   width: 85%;
 
   @media (max-width: 1280px) {
     width: 100%;
   }
+}
+
+.slick-item{
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+}
+
+.slick-item-1{
+  background-color: red;
+}
+
+.slick-item-2{
+  background-color: green;
+}
+
+.slick-item-3{
+  background-color: yellow;
 }
 
 #bar-menu{
