--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -80,7 +80,7 @@
 }
 
 .products {
-  @include product;
+  // @include product;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -299,4 +299,113 @@
 
 #bar-menu{
   display: none;
+}
+
+// Style each individual product
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  text-decoration: none;
+  color:black;
+  font-family: "Helvetica Neue LT", sans-serif;
+  width: calc(33.33% - 30px); // Set the width to one-third of the container with some spacing
+  box-sizing: border-box;
+  border: 3px solid transparent;
+  border-radius: 24px;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 20px;	
+
+  @media (max-width: 768px) {
+      width: calc(45% - 10px); 
+      padding: 5px;
+      justify-content: start ;
+  }
+
+  &:hover{
+      transform: scale(1.05);
+      border: 1px solid black;
+
+      @media (max-width: 768px) {
+          transform: scale(1);
+          border: 1px solid transparent;
+      }
+  }
+}
+
+.product-image{
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+  @media (max-width: 768px) {
+      font-size: 0.8rem;
+      padding: 0;
+  }
+}
+
+
+.product-info{
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
+  padding-bottom: 15px;
+}
+
+.product-name{
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+
+  @media (max-width: 768px) {
+      font-size: 1rem;
+  }
+}
+
+.product-category{
+  @media (max-width: 768px) {
+      display: none;
+  }
+}
+
+.product-price{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  @media (max-width: 768px) {
+      flex-direction: column;
+      align-items: baseline;
+  }
+
+  .product-price__normal{
+      color: #999;
+      font-size: 0.9rem;
+      display: flex;
+      flex-direction: column;
+      text-decoration: none;
+      padding: 0 10px;
+
+      @media (max-width: 768px) {
+          font-size: 0.8rem;
+          padding: 0;
+      }
+  }
+  .product-price__mayorista{
+      color: #000;
+      font-size: 1.25rem;
+      font-weight: bold;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      padding: 0 10px;
+
+      @media (max-width: 768px) {
+          font-size: 0.8rem;
+          padding: 0;
+      }
+
+  }
 }
