--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -5,7 +5,7 @@
 
 .shop-notice {
   width: 100%;
-  background: #D6F665;
+  background: #EB6123;
   padding: .3rem .75rem .5rem;
   text-align: center;
   border-top: 1px solid #2c2c2d;
