--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -314,7 +314,7 @@
   border: 3px solid transparent;
   border-radius: 24px;
   transition: all 0.3s ease-in-out;
-  margin-bottom: 20px;	
+  margin: 0!important;
 
   @media (max-width: 768px) {
       width: calc(45% - 10px); 
@@ -339,6 +339,7 @@
 }
 
 .product-image{
+  padding: 15px;
   width: 100%;
   height: auto;
   display: flex;
@@ -349,7 +350,6 @@
       padding: 0;
   }
 }
-
 
 .product-info{
   display: flex;
@@ -377,8 +377,9 @@
 .product-price{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: end;
   align-items: center;
+  padding-top: 10px;
 
   @media (max-width: 768px) {
       flex-direction: column;
