--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -84,6 +84,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 25px;  
 
   @media (max-width: 768px) {
     justify-content: space-between;
