--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -322,7 +322,7 @@
 .main_forms{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     gap: 25px;
 
     @media (max-width: 768px) {
