:sparkles: Make form class with flex

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -343,6 +343,7 @@
 }
 
 .main_forms__register__forms{
+
     .forms_label__input{
         padding: 10px;
         border-radius: 5px;
@@ -357,6 +358,12 @@
         border: 1px solid #ccc;
         font-size: 1rem;
     }
+}
+
+.main_forms__register__forms > forms{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 
