:bug: Update name container

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -363,7 +363,7 @@
     }
 }
 
-.main_forms__register__forms > forms{
+.main_forms__register__forms > form{
     display: flex;
     flex-direction: column;
     gap: 20px;
