:lipstick: Update  width of textarea

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -360,6 +360,7 @@
         border: 1px solid #ccc;
         font-size: 1rem;
         font-family: "Helvetica Neue LT", sans-serif;
+        width: 100%!important;
     }
 }
 
