:sparkles: Create separator

--- a/src/scss/retailers.scss
+++ b/src/scss/retailers.scss
@@ -371,6 +371,12 @@
 }
 
 
+.main_forms__separator{
+    width: 5px;
+    height: 100%;
+    background-color: #ccc;
+}
+
 .main_forms__login__forms{
     display: flex;
     flex-direction: column;
